# pauliarray

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api_reference/: modules.doctree  pauliarray.binary.doctree  pauliarray.conversion.doctree  pauliarray.doctree  pauliarray.mapping.doctree  pauliarray.pauli.doctree  pauliarray.utils.doctree  tests.doctree
.doctrees/tutorials/: commutators.doctree  fermion_to_qubit_mapping.doctree
.doctrees/user_guide/: data_structures.doctree  operations.doctree
.github/workflows/: actions.yml
_modules/: index.html
_sources/: index.rst
api_reference/: modules.html  pauliarray.binary.html  pauliarray.conversion.html  pauliarray.html  pauliarray.mapping.html  pauliarray.pauli.html  pauliarray.utils.html  tests.html
pauliarray/: __init__.py
tests/: test_basis_state_array.py  test_bits_operations.py  test_conversion.py  test_diagonalisation_with_circuits.py  test_diagonalisation_with_operators.py  test_estimation_scheme.py  test_mapping.py  test_nqubit_state.py  test_operator.py  test_operator_array_type_1.py  test_operator_array_type_2.py  test_partition.py  test_partition_exclusive.py  test_partition_overlap.py  test_pauli_array.py  test_symplectic.py  test_void_operations.py  test_weighted_pauli_array.py
tutorials/: commutators.html  fermion_to_qubit_mapping.html
use_cases/: hamiltonian_partition.py
user_guide/: data_structures.html  operations.html
(+89 files in other folders)
