[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pauliarray"
authors = [
    {name = "Maxime Dion", email = "maxime.dion@usherbrooke.ca"},
    {name = "Tania Belabbas", email = "tania.belabbas@usherbrooke.ca"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = ["numpy"]

[project.urls]
Home = "https://github.com/algolab-quantique/pauliarray.git"
